# scatwave

./: README.md
classifier/deepnet_for_cifar/: FB_data_augmentation.lua  batches.bash  check_computation_time.lua  check_computations_time.m  get_F1.lua  get_W1.lua  provider_cifar10.lua  replace_scattering_fix_end_cifar10.lua  retrain_with_fix_F1_pretrained_end_cifar10.lua  retrain_with_fix_W1_pretrained_end_cifar10.lua  train_cifar10.lua  train_cifar100.lua  train_cifar10_limited_data.lua  train_cifar10_shallow_augmented.lua
classifier/deepnet_for_cifar/deepnet_analysis/: F1_to_fourier.m  apply_DCT_along_first.m  apply_DCT_along_first_inv.m  apply_haar_along_first.m  apply_haar_along_first_inv.m  fourier_to_F1.m  sparsify_F1.m  sparsify_W1.m
classifier/deepnet_for_cifar/models/: FC_model_cifar10.lua  FC_model_cifar100.lua  damned_absolute_value.lua  generic_model.lua  generic_model_cifar10.lua  generic_model_cifar100.lua  replace_scattering_cifar10.lua
scatwave_pkg/: CMakeLists.txt  complex.lua  conv_lib.lua  engine.lua  filters_bank.lua  init.lua  main_test.lua  main_test_cuda.lua  my_fft.lua  my_fft_test.lua  network.lua  network_1d_translation.lua  network_2d_rototranslation.lua  network_2d_translation.lua  network_2d_translation_WT.lua  scatwave-scm-1.rockspec  test_cudaaaa.lua  tools.lua  unit_test.lua  wavelet_transform.lua  wrapper_fft.lua
scatwave_pkg/cuda/: README.md  README.md~  cdefs.lua  defines.lua  engine_CUDA.lua  engine_CUDA_nvidia.lua  init.lua  wrapper_CUDA_fft.lua  wrapper_CUDA_fft_nvidia.lua
scatwave_pkg/cuda/dev/: create-init.lua
